# dumb-decontam-rs

./: .gitignore  Cargo.toml
src/: main.rs
