[package]
name = "dumb-decontam-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dashmap = "6.1.0"
indicatif = "0.17.11"
mj_io = "0.1.4"
rand = "0.9.1"
rayon = "1.10.0"
serde_json = "1.0.140"
unicode-segmentation = "1.12.0"
clap = { version = "4.1.11", features = ["derive"] }
